force-app/main/default/objects/Trigger_Action__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>The order, smallest-to-largest, in which the trigger actions are executed for this SObject.</description>
    <inlineHelpText>The order, smallest-to-largest, in which the trigger actions are executed for this SObject.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Number</type>
</CustomField>