force-app/main/default/objects/Trigger_Action__mdt/fields/sObject_Trigger_Setting__c.field-meta.xml
<CustomField>
    <fullName>sObject_Trigger_Setting__c</fullName>
    <description>The SObject Trigger Setting this trigger operation is for.</description>
    <inlineHelpText>The SObject Trigger Setting this trigger operation is for.</inlineHelpText>
    <label>sObject Trigger Setting</label>
    <referenceTo>sObject_Trigger_Setting__mdt</referenceTo>
    <relationshipLabel>Trigger Actions</relationshipLabel>
    <relationshipName>Trigger_Actions</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>